--- a/app/templates/prescription.html
+++ b/app/templates/prescription.html
@@ -7,12 +7,22 @@ block navbar %}
   >
     <h3 class="text-3xl text-italic font-bold text-blue-500 px-5">MEDIC</h3>
     <nav class="flex w-[50%] items-center justify-between py-8"></nav>
-    <a
-      href="{{ url_for('logout') }}"
-      class="bg-red-500 text-white border border-red-600 rounded-md px-4 py-2 inline-block transition duration-300 ease-in-out hover:bg-red-600 hover:border-red-700 focus:outline-none focus:ring focus:border-red-700"
-    >
-      Log Out
-    </a>
+    <div class="flex flex-row items-center justify-center gap-4">
+      <a
+        href="{{ url_for('logout') }}"
+        class="bg-red-500 text-white border border-red-600 rounded-md px-4 py-2 inline-block transition duration-300 ease-in-out hover:bg-red-600 hover:border-red-700 focus:outline-none focus:ring focus:border-red-700"
+      >
+        Log Out
+      </a>
+      <img
+        src="{{url_for('static', filename='images/goggle-icon.jpg')}}"
+        alt="Google Icon"
+        class="mr-2 rounded-full"
+        width="20"
+        height="20"
+      />
+       <p class="text-white">Louis Muriuki</p>
+    </div>
   </div>
 </div>
 
