--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,10 +21,16 @@
             MEDIC
           </h3>
           <nav class="flex w-[50%] items-center justify-between py-8">
-            <a href="#" class="text-white hover:underline">Home</a>
-            <a href="#" class="text-white hover:underline">About</a>
-            <a href="#" class="text-white hover:underline">Services</a>
-            <a href="#" class="text-white hover:underline">Contact us</a>
+            <a href="{{ '/' }}" class="text-white hover:underline">Home</a>
+            <a href="{{ 'aboutus' }}" class="text-white hover:underline"
+              >About</a
+            >
+            <a href="{{ 'services' }}" class="text-white hover:underline"
+              >Services</a
+            >
+            <a href="{{ 'contactUs' }}" class="text-white hover:underline"
+              >Contact us</a
+            >
           </nav>
           <button
             class="bg-white text-gray-800 border border-gray-300 rounded-md px-5 flex items-center hover:bg-gray-100 focus:outline-none focus:ring focus:border-blue-300"
@@ -46,27 +52,31 @@
         </div>
       </div>
 
-{% endblock %} {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
-  <div class="fixed inset-x-0 bottom-0 z-50 flex justify-center items-end space-x-4 p-4">
-    {% for category, message in messages %}
-      <div class="flex-grow max-w-md bg-white border rounded-md shadow-md px-4 py-2 mb-4 ">
-        <div class="flex justify-between items-center">
-          <div class="font-bold">
-            {{ message }}
+      {% endblock %} {% with messages =
+      get_flashed_messages(with_categories=true) %} {% if messages %}
+      <div
+        class="fixed inset-x-0 bottom-0 z-50 flex justify-center items-end space-x-4 p-4"
+      >
+        {% for category, message in messages %}
+        <div
+          class="flex-grow max-w-md bg-white border rounded-md shadow-md px-4 py-2 mb-4"
+        >
+          <div class="flex justify-between items-center">
+            <div class="font-bold">{{ message }}</div>
+            <button
+              {#
+              onclick="this.parentNode.remove()"
+              #}
+              onclick="this.closest('.fixed').remove()"
+              class="text-lg text-gray-500 hover:text-gray-700 focus:outline-none"
+            >
+              &times;
+            </button>
           </div>
-          <button
-           {# onclick="this.parentNode.remove()" #}
-            onclick="this.closest('.fixed').remove()"
-            class="text-lg text-gray-500 hover:text-gray-700 focus:outline-none"
-          >
-            &times;
-          </button>
         </div>
+        {% endfor %}
       </div>
-    {% endfor %}
-  </div>
-{% endif %} {% endwith %}
-
+      {% endif %} {% endwith %}
 
       <main class="container mx-auto p-8 h-screen">
         {% block content %}
