--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,12 +91,12 @@
             <h1 class="font-bold uppercase mt-4 text-4xl text-blue-500">
               HEALTH
             </h1>
-            <div class="flex flex-col gap-8 justify-start items-center mt-28">
+            <div class="flex flex-col gap-8 justify-start mt-28">
               <p class="text-2xl">
                 Login to Medic to view/track your medication
               </p>
               <button
-                class="bg-white text-gray-800 border border-gray-300 rounded-md px-5 flex items-center hover:bg-gray-100 focus:outline-none focus:ring focus:border-blue-300"
+                class="bg-white justify-center max-w-xs text-gray-800 border border-gray-300 rounded-md px-5 flex items-center hover:bg-gray-100 focus:outline-none focus:ring focus:border-blue-300"
               >
                 <a class="flex flex-row w-max items-center" href="{{'login'}}">
                   <img
